[gd_scene load_steps=4 format=3 uid="uid://d2iksyhoy708o"]

[ext_resource type="Script" path="res://scripts/ui.gd" id="1_k5bm0"]

[sub_resource type="SystemFont" id="SystemFont_v5jlp"]

[sub_resource type="Theme" id="Theme_lx67s"]
default_font = SubResource("SystemFont_v5jlp")
default_font_size = 40

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_lx67s")
script = ExtResource("1_k5bm0")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.125911, 0.125911, 0.125911, 1)

[node name="TitleScreen" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="TitleScreen"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.5
offset_right = 200.5
offset_bottom = 110.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 80
text = "Bot or Not"

[node name="StartButton" type="Button" parent="TitleScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -51.0
offset_top = -31.5
offset_right = 51.0
offset_bottom = 31.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
text = "Start"

[node name="GamemodeSelect" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = 13.0
offset_right = -1.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="GamemodeSelect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -262.0
offset_right = 262.0
offset_bottom = 83.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 60
text = "Select Gamemode"

[node name="Survival" type="Button" parent="GamemodeSelect"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.3
anchor_right = 0.5
anchor_bottom = 0.3
offset_left = 5.0
offset_right = -5.0
grow_horizontal = 2
grow_vertical = 2
text = "Survival
"
metadata/_edit_use_anchors_ = true

[node name="Description" type="Label" parent="GamemodeSelect/Survival"]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
text = "Survive for as long as possible against infinite AI guards"
autowrap_mode = 3

[node name="Escape" type="Button" parent="GamemodeSelect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.3
anchor_right = 1.0
anchor_bottom = 0.3
offset_left = 5.0
offset_right = -5.0
grow_horizontal = 2
grow_vertical = 2
text = "Escape"

[node name="Description" type="Label" parent="GamemodeSelect/Escape"]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
text = "Reach the exit without being caught"
autowrap_mode = 3

[node name="LevelSelect" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Select Level
"

[connection signal="pressed" from="TitleScreen/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="GamemodeSelect/Survival" to="." method="_on_survival_pressed"]
[connection signal="pressed" from="GamemodeSelect/Escape" to="." method="_on_escape_pressed"]
